--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/trip_icon"
+        android:icon="@drawable/trips"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
@@ -21,13 +21,7 @@
         <activity
             android:name=".LoginActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.NoActionBar">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".LoginResultActivity"
             android:screenOrientation="portrait"
@@ -45,17 +39,50 @@
             android:name=".BudgetValueActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".ViewAllActivity"
-            android:theme="@style/AppTheme.NoActionBar"/>
-        <activity android:name=".AboutActivity"
-            android:theme="@style/AppTheme.NoActionBar"/>
-        <activity android:name=".RadioActivity"
-            android:theme="@style/AppTheme.NoActionBar"/>
-        <activity android:name=".DaywiseActivity"
-            android:theme="@style/AppTheme.NoActionBar"/>
-        <activity android:name=".TripwiseActivity"
-            android:theme="@style/AppTheme.NoActionBar"/>
-        <activity android:name=".CategorywiseActivity"
+        <activity
+            android:name=".ViewAllActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".AboutActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".RadioActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".DaywiseActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".TripwiseActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".CategorywiseActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".MealActivity" />
+        <activity
+            android:name=".WelcomeScreen"
+            android:theme="@style/AppTheme.NoActionBar">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".UpdateDeleteActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".Update"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".Delete"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".ExpenseUpdate"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".ExpenseDelete"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".StartScreen"
             android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
